# Learning_CMake

./: Cmake.md  README.md
project/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cpp
project/MathFunctions/: MathFunctions.h  mysqrt.cpp
